# zeninvest

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  PLAN.md  README.md  SECURITY.md  alembic.ini  conftest.py  docker-compose.yml  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
backtests/: default.yaml
branding/: BRAND.md  zenouz-final.html
config/: .env.example  settings.yaml
dashboard/: __init__.py
docs/: AGENTIC_RESEARCH.md  AGENTIC_RESEARCH_IMPLEMENTATION_PLAN.md  AGENTIC_RESEARCH_PROJECT.md  AGENT_LOGIC_AUDIT.md  ARCHITECTURE.md  AUDIT_INDEX.md  AUDIT_REPORT.md  BACKTESTING.md  BACKTESTING_PROJECT_PLAN.md  CHAT_AND_COMMANDS.md  CHAT_INTERFACE_PROJECT.md  CLOUDFLARE_DASHBOARD_DOMAIN_PLAN.md  COMPETITIVE_ANALYSIS.md  CONVERSATIONAL_TRADING_WORKFLOW.md  DASHBOARD.md  DASHBOARD_DEPLOYMENT.md  DASHBOARD_DESIGN_REVIEW.md  DASHBOARD_STABILISATION_PLAN.md  DASHBOARD_VISUALISATION_PROJECT.md  DASHBOARD_VPS_DEPLOYMENT_PLAN.md  DATA_EXPORT_RUNBOOK.md  DATA_RATIONALE.md  DEPLOYMENT.md  FAILURE_MODES.md  FOLLOWUP_RESEARCH_ROUTING_PLAN.md  FORMAL_VERIFICATION_AUDIT.md  GOVERNANCE.md  LOCAL_LIVE_RUN.md  LOCAL_SETUP.md  MAC_SETUP.md  MAIN_BRANCH_IMPACT_REVIEW_UPDATED.md  MARKET_GUIDANCE_AND_STRATEGY_ATTRIBUTION_PLAN.md  Nemotron_3_Super_Integration_Investigation.md  OPEN_SOURCE_LAUNCH.md  ORDER_MANAGEMENT_PROJECT.md  PRESENTATION.md  PROACTIVE_MACRO_NEWS_INTELLIGENCE.md  PUBLIC_REPO_SCOPE.md  SEED_ENRICHMENT_PLAN.md  SLACK_TRADE_COMMANDS_PROJECT.md  (+10 more)
notebooks/: brave_tavily_comparison.py  diagnostics.ipynb  enriched_instruments.ipynb  research_api_decision_framework.ipynb  research_api_investigation.ipynb  test_brave_apis.py  test_search_enrichment_benchmark.py
scripts/: analyze_rejected_tickers.py  audit_performance_data.py  backfill_industry_summary.py  build_zeninvest_fixture.py  bulk_enrich_instruments.py  check_enrichment_progress.py  export_dev_db_fixture.py  generate_seed_from_t212.py  import_zeninvest_dataset.sh  monitor_enrichment.py  run_migrations.sh  setup_mac.sh  validate_zeninvest_fixture.py  verify_us19_schema.py  vps-tier2-sudo-cleanup.sh  zengrowth-neo4j-memory-tune.sh
src/: __init__.py
tests/: conftest.py  test_agent_logic_audit.py  test_backtesting_broker.py  test_backtesting_engine.py  test_backtesting_io.py  test_backtesting_leakage_guards.py  test_backtesting_metrics.py  test_backtesting_walk_forward.py  test_batch_enrichment.py  test_budget_guard_wiring.py  test_chat_api.py  test_chat_api_v2.py  test_chat_session_stub.py  test_commands_api.py  test_committee_debate_phase2.py  test_composer_safety.py  test_context_management.py  test_conversation_orchestrator.py  test_cost_budget_atomic.py  test_cost_tracker.py  test_daily_report.py  test_dashboard_async_utils.py  test_dashboard_auth.py  test_dashboard_decisions.py  test_dashboard_execution_quality.py  test_dashboard_insights.py  test_dashboard_learning.py  test_dashboard_macro.py  test_dashboard_monthly_summary.py  test_dashboard_orders_health.py  test_dashboard_outcomes_timeline.py  test_dashboard_port_guard.py  test_dashboard_portfolio_stop_loss_routes.py  test_dashboard_public_routes.py  test_dashboard_run_phase_timing.py  test_dashboard_runs.py  test_dashboard_runs_read_only.py  (+91 more)
(+462 files in other folders)
