[tool.poetry]
name = "investment-agent"
version = "0.1.0"
description = "Autonomous investment agent using multi-LLM strategy with Trading 212 API"
authors = ["Investment Agent Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = ">=0.39.0"
openai = ">=1.50.0"
google-generativeai = ">=0.8.0"
yfinance = ">=0.2.40"
pandas = ">=2.1.0"
numpy = ">=1.26.0"
ta = ">=0.11.0"
httpx = ">=0.27.0"
finnhub-python = ">=2.4.0"
apscheduler = ">=3.10.0"
sqlalchemy = ">=2.0.0"
alembic = ">=1.13.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0.0"
rich = ">=13.0.0"
click = ">=8.1.0"
tenacity = ">=9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
mypy = ">=1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
