[tool.poetry]
name = "investment-agent"
version = "0.1.0"
description = "Autonomous investment agent using multi-LLM strategy with Trading 212 API"
authors = ["Investment Agent Team"]
readme = "README.md"
packages = [{include = "src"}, {include = "dashboard"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = ">=0.39.0"
openai = ">=1.50.0"
yfinance = ">=0.2.40"
pandas = ">=2.1.0"
numpy = ">=1.26.0"
ta = ">=0.11.0"
httpx = ">=0.27.0"
finnhub-python = ">=2.4.0"
apscheduler = ">=3.10.0"
sqlalchemy = ">=2.0.0"
alembic = ">=1.13.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0.0"
rich = ">=13.0.0"
click = ">=8.1.0"
tenacity = ">=9.0.0"
google-genai = "^1.64.0"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pydantic = ">=2.0.0"
requests = "^2.32.5"
slack-sdk = ">=3.27.0"
lxml = ">=6.1.0"
aiohttp = ">=3.13.4"
urllib3 = ">=2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
mypy = ">=1.8.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.0.0"
jupyter-server = ">=2.18.0"
jupyterlab = ">=4.5.7"
notebook = ">=7.5.6"
mako = ">=1.3.12"
mistune = ">=3.2.1"

[tool.poetry.group.learning-data]
optional = true

[tool.poetry.group.learning-data.dependencies]
pyarrow = ">=15.0.0"

[tool.poetry.group.memory]
optional = true

[tool.poetry.group.memory.dependencies]
neo4j = ">=5.0.0"

[tool.poetry.group.learning]
optional = true

[tool.poetry.group.learning.dependencies]
scikit-learn = ">=1.3.0"
pyarrow = ">=15.0.0"
lightgbm = ">=4.0.0"
shap = ">=0.45.0"
matplotlib = ">=3.8.0"

[tool.poetry.group.rl]
optional = true

[tool.poetry.group.rl.dependencies]
gymnasium = ">=0.29.0"
# d3rlpy ships its own torch wheel; pin loosely so we can install on CPU-only hosts.
d3rlpy = ">=2.5.0"

[tool.poetry.group.mlflow]
optional = true

[tool.poetry.group.mlflow.dependencies]
mlflow = ">=2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
